# Route-Optimization-and-Local-Tendering

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: GIT_WORKFLOW.md
optimization/config/: __init__.py  config.py
optimization/loaders/: __init__.py  courier_loader.py  distance_loader.py  order_loader.py
optimization/models/: courier.py  route.py
optimization/pipeline/: __init__.py  run_pipeline.py
optimization/preprocessing/: __init__.py  distance_index.py  mappings.py  matrices.py
optimization/solvers/: __init__.py  courier_assignment.py  local_polish.py  rebalance.py  rebalancer.py  recombine.py  simulated_annealing.py  tsp_solver.py
optimization/utils/: logger.py  metrics.py  persistence.py  timing.py
scripts/: build_distances.py
tests/: test_imports.py  test_sota_fitness.py  test_tsp_solvers.py
